fix: add Address type in a separated file fix: split user profile and avatar components fix: add a header as directive extension

--- a/src/app/layout/pages/main-dashboard-page/main-dashboard-page.component.html
+++ b/src/app/layout/pages/main-dashboard-page/main-dashboard-page.component.html
@@ -1,7 +1,7 @@
 <sidebar />
 
 <div class="flex flex-col grow">
-  <header-info />
+  <header header-info></header>
   <main
     class="grow m-4 p-4 mt-0 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700"
   >
