--- a/src/app/layout/containers/header/header.component.html
+++ b/src/app/layout/containers/header/header.component.html
@@ -1,4 +1,6 @@
-<user-profile *ngIf="user$ | async as user" [user]="user" />
-<button (click)="logout()">
+@if (user$ | async; as user) {
+<user-profile [user]="user" />
+}
+<button type="button" (click)="logout()">
   <i class="fa fa-sign-out fa-2x text-gray-500"></i>
 </button>
