--- a/src/app/shared/components/validation-message/validation-message.component.html
+++ b/src/app/shared/components/validation-message/validation-message.component.html
@@ -1,3 +1,5 @@
-<small *ngFor="let error of errors | keyvalue | slice: 0 : 1">
+@for (error of errors | keyvalue | slice: 0 : 1; track error.key) {
+<small>
   {{ errorMessages[error.key] || error.value }}
 </small>
+}
