--- a/src/app/features/auth/components/register-form/register-form.component.html
+++ b/src/app/features/auth/components/register-form/register-form.component.html
@@ -11,10 +11,9 @@
       placeholder="Name"
       type="text"
     />
-    <validation-message
-      *ngIf="form.controls['name'].touched"
-      [errors]="form.controls['name'].errors"
-    />
+    @if (!form.controls['name'].untouched) {
+    <validation-message [errors]="form.controls['name'].errors" />
+    }
   </div>
   <div class="mb-2">
     <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
@@ -27,10 +26,9 @@
       placeholder="Email"
       type="email"
     />
-    <validation-message
-      *ngIf="form.controls['email'].touched"
-      [errors]="form.controls['email'].errors"
-    />
+    @if (!form.controls['email'].untouched) {
+    <validation-message [errors]="form.controls['email'].errors" />
+    }
   </div>
   <div class="mb-6 mt-2">
     <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
@@ -58,10 +56,9 @@
         ></i>
       </button>
     </div>
-    <validation-message
-      *ngIf="form.controls['password'].touched"
-      [errors]="form.controls['password'].errors"
-    />
+    @if (!form.controls['password'].untouched) {
+    <validation-message [errors]="form.controls['password'].errors" />
+    }
   </div>
   <div class="flex flex-col gap-1 items-center justify-between">
     <input
