--- a/src/app/features/auth/pages/auth-page/auth-page.component.html
+++ b/src/app/features/auth/pages/auth-page/auth-page.component.html
@@ -1,4 +1,6 @@
-<spinner *ngIf="loading$ | async" size="lg" />
+@if (loading$ | async) {
+<spinner size="lg" />
+}
 <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 form-middle">
   <logo title="Freenance" src="assets/icons/Logo.svg" alt="Freenance logo" />
   <router-outlet />
