--- a/src/app/features/settings/components/settings-form/settings-form.component.html
+++ b/src/app/features/settings/components/settings-form/settings-form.component.html
@@ -3,30 +3,29 @@
   <h6 class="font-semibold my-2">Avatar</h6>
   <file-upload
     formControlName="avatar"
-    accept=".jpeg"
+    accept=".jpg,.jpeg"
     [dimension]="dimension"
+    [url]="user().avatar"
   />
-  <validation-message
-    *ngIf="form.controls['avatar'].touched"
-    [errors]="form.controls['avatar'].errors"
-  />
+  @if (!form.controls['avatar'].untouched) {
+  <validation-message [errors]="form.controls['avatar'].errors" />
+  }
 
   <label class="block font-semibold mb-2 mt-4" for="name">Name</label>
   <input
-    class="shadow appearance-none border border-gray-300 bg-gray-50 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+    class="shadow border border-gray-300 bg-gray-50 rounded-lg w-full py-2 px-3 text-gray-700"
     formControlName="name"
     id="name"
     placeholder="Name"
     type="text"
   />
-  <validation-message
-    *ngIf="form.controls['name'].touched"
-    [errors]="form.controls['name'].errors"
-  />
+  @if (!form.controls['name'].untouched) {
+  <validation-message [errors]="form.controls['name'].errors" />
+  }
 
   <label class="block font-semibold mb-2 mt-4" for="email">Email</label>
   <input
-    class="shadow appearance-none disabled border border-gray-300 bg-gray-50 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+    class="shadow disabled border border-gray-300 bg-gray-200 rounded-lg w-full py-2 px-3 text-gray-700"
     formControlName="email"
     id="email"
     placeholder="Email"
@@ -39,46 +38,43 @@
     Street Address
   </label>
   <input
-    class="shadow appearance-none border border-gray-300 bg-gray-50 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+    class="shadow border border-gray-300 bg-gray-50 rounded-lg w-full py-2 px-3 text-gray-700"
     formControlName="street"
     id="street"
     placeholder="Street Address"
     type="text"
   />
-  <validation-message
-    *ngIf="form.controls['street'].touched"
-    [errors]="form.controls['street'].errors"
-  />
+  @if (!form.controls['street'].untouched) {
+  <validation-message [errors]="form.controls['street'].errors" />
+  }
   <div class="flex w-full">
     <div class="w-1/3">
       <label class="block font-semibold mb-2 mt-4" for="city">City</label>
       <input
-        class="shadow appearance-none border border-gray-300 w-full bg-gray-50 rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        class="shadow border border-gray-300 w-full bg-gray-50 rounded-lg py-2 px-3 text-gray-700"
         formControlName="city"
         id="city"
         placeholder="City"
         type="text"
       />
-      <validation-message
-        *ngIf="form.controls['city'].touched"
-        [errors]="form.controls['city'].errors"
-      />
+      @if (!form.controls['city'].untouched) {
+      <validation-message [errors]="form.controls['city'].errors" />
+      }
     </div>
     <div class="mx-4 w-1/3">
       <label class="block font-semibold mb-2 mt-4" for="postCode">
         Postal Code
       </label>
       <input
-        class="shadow appearance-none border border-gray-300 w-full bg-gray-50 rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        class="shadow border border-gray-300 w-full bg-gray-50 rounded-lg py-2 px-3 text-gray-700"
         formControlName="postCode"
         id="postCode"
         placeholder="Post Code"
         type="text"
       />
-      <validation-message
-        *ngIf="form.controls['postCode'].touched"
-        [errors]="form.controls['postCode'].errors"
-      />
+      @if (!form.controls['postCode'].untouched) {
+      <validation-message [errors]="form.controls['postCode'].errors" />
+      }
     </div>
     <div class="w-1/3">
       <label for="countries" class="block font-semibold mb-2 mt-4">
@@ -87,21 +83,23 @@
       <select
         id="countries"
         formControlName="country"
-        class="shadow appearance-none border border-gray-300 w-full bg-gray-50 rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        class="shadow border border-gray-300 w-full bg-gray-50 rounded-lg py-2 px-3 text-gray-700"
       >
         <option disabled ngValue="">Select Country!</option>
-        <option *ngFor="let country of countries" [ngValue]="country.id">
+
+        @for ( country of countries; track country.id ) {
+        <option [ngValue]="country.id">
           {{ country.name }}
         </option>
+        }
       </select>
-      <validation-message
-        *ngIf="form.controls['country'].touched"
-        [errors]="form.controls['country'].errors"
-      />
+      @if (!form.controls['country'].untouched) {
+      <validation-message [errors]="form.controls['country'].errors" />
+      }
     </div>
   </div>
   <input
-    class="bg-blue-500 float-right hover:bg-blue-700 font-bold text-white mt-4 py-2 px-4 rounded focus:outline-none focus:shadow-outline w-24 cursor-pointer"
+    class="bg-blue-500 float-right hover:bg-blue-700 font-bold text-white mt-4 py-2 px-4 rounded w-24 cursor-pointer"
     type="submit"
     value="Save"
   />
