--- a/src/app/features/settings/pages/settings-page/settings-page.component.html
+++ b/src/app/features/settings/pages/settings-page/settings-page.component.html
@@ -1,8 +1,6 @@
 <div class="pl-16 pt-4">
   <h1>Settings</h1>
-  <settings-form
-    *ngIf="user$ | async as user"
-    [user]="user"
-    (submitForm)="saveUserSettings($event)"
-  />
+  @if (user$ | async; as user) {
+  <settings-form [user]="user" (submitForm)="saveUserSettings($event)" />
+  }
 </div>
